# xapian-rs

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  build.rs
.github/workflows/: ci.yml  docs.yml
cpp/: shim.h
examples/: expanded_query.rs  facet.rs  field_processor.rs  index.rs  match_decider.rs  query.rs  ranges.rs
src/: db.rs  doc.rs  ffi.rs  iter.rs  lib.rs  query.rs  range.rs  search.rs  term.rs
tests/: common.rs  index.rs  ranges.rs
