[package]
name = "xapian-rs"
version = "0.1.0"
edition = "2021"

[dependencies]
autocxx = "0.26.0"
bitflags = "2.5.0"
bytes = "1.6.0"
cxx = "1.0.122"

[build-dependencies]
autocxx-build = "0.26.0"
miette = { version = "5", features = ["fancy"] }

[dev-dependencies]
anyhow = "1.0.86"
clap = { version = "4.5.4", features = ["derive"] }
reqwest = { version = "0.12.4", features = ["blocking", "json"] }
serde = { version = "1.0.202", features = ["derive"] }
serde_json = "1.0.117"
