[package]
name = "xapian-rs"
version = "0.3.0"
edition = "2021"
license = "MIT"
description = "Rust bindings for the Xapian search engine"
rust-version = "1.70"
repository = "https://github.com/torrancew/xapian-rs"
documentation = "https://torrancew.github.io/xapian-rs"

[dependencies]
autocxx = "0.27.0"
bitflags = "2.6.0"
bytes = "1.6.0"
chrono = { version = "0.4", optional = true }
cxx = "1.0.122"

[build-dependencies]
autocxx-build = "0.27.0"
miette = { version = "5", features = ["fancy"] }

[dev-dependencies]
anyhow = "1.0.86"
clap = { version = "4.5.4", features = ["derive"] }
csv = "1.3.0"
float-ord = "0.3.2"
serde = { version = "1.0.202", features = ["derive"] }
serde_json = "1.0.117"

[features]
chrono = ["dep:chrono"]
